--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -2,18 +2,16 @@
 $body-bg: #f8fafc;
 
 // Typography
-$font-family-sans-serif: 'Nunito', sans-serif;
+$font-family-sans-serif: 'Raleway', sans-serif;
+$alfa: 'Alfa Slab One', cursive;
+$raleway: 'Raleway', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
 // Colors
-$blue: #3490dc;
-$indigo: #6574cd;
-$purple: #9561e2;
-$pink: #f66d9b;
-$red: #e3342f;
-$orange: #f6993f;
-$yellow: #ffed4a;
-$green: #38c172;
-$teal: #4dc0b5;
-$cyan: #6cb2eb;
+$black: #212121;
+$white: #ffffff;
+$pink: #F52294;
+$blue: #239AF5;
+$purple: #7F23F5;
+$mint: #23F5B6;
