--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,8 +1,9 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
-
+@import 'font.scss';
 // Variables
 @import 'variables';
+@import 'general';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
