Update styling of homepage

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -27,6 +27,11 @@
   right: 0;
 }
 
+h2 {
+  font-size: 18px;
+  color: #ffffff;
+}
+
 /*!
  * Bootstrap v4.6.0 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
