--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -3,7 +3,7 @@ $body-bg: #f8fafc;
 
 // Typography
 $font-family-sans-serif: 'Raleway', sans-serif;
-$alfa: 'Alfa Slab One', cursive;
+$alfa: 'Alfa Slab One', sans-serif;
 $raleway: 'Raleway', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
